--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,17 @@ phases:
 
   build:
     commands:
-      - echo Build started on 'date'
-      - cp index.html /var/www/html/
+      - echo Build started on $(date)
+
   post_build:
     commands:
-      - echo configuring NGINX
-  
+      - echo Build completed on $(date)
+
 artifacts:
   files:
     - index.html
     - style.css
-    - scripts/**
+    - scripts/**       # if you want to include your shell scripts
     - appspec.yml
   discard-paths: no
   base-directory: .
